cambios pequeños en vistas y controllers