@@ -141,6 +141,26 @@
 
     <build>
         <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.8.0</version>
+	            <configuration>
+	                <!-- 1.10, 11, 12, 13-->
+	                <release>13</release>
+	                <compilerArgs>
+	                    --enable-preview
+	                </compilerArgs>
+	            </configuration>
+	        </plugin>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>3.0.0-M3</version>
+	            <configuration>
+	                <argLine>--enable-preview</argLine>
+	            </configuration>
+	        </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -166,8 +186,8 @@
         </repository>
     </repositories>
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <jersey.version>2.30</jersey.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
